Fix the failing SecurityTest and add resources to svn:ignore
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@387174 13f79535-47bb-0310-9956-ffa450edef68